sistemato bug dropdown menu aggiungendo z-index

--- a/src/partials/_navbar.scss
+++ b/src/partials/_navbar.scss
@@ -43,6 +43,7 @@
             top: 57px;
             background-color: #f1f1f1;
             width: 200%;
+            z-index: 2;
 
             a {
                 color: $secondary-text-color;
